--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<nav class="main-nav">
 		<div class="container">
-			<a href="#">About Authors</a>
+			<a href="/about.html">About Authors</a>
 			<a href="#">Shoplant</a>
 			<a href="#">Data succulents</a>
 	</nav>
