Comment out link to other pages for now

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<nav class="main-nav">
 		<div class="container">
 			<a href="/about.html">About Authors</a>
-			<a href="#">Shoplant</a>
-			<a href="#">Data succulents</a>
+			<!-- <a href="#">Shoplant</a>
+			<a href="#">Data succulents</a> -->
 	</nav>
 
     <div class="image-gallery">
