--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>PlantPedia</title>
   <link rel="stylesheet" href = "style.css">
+  <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 <body>
@@ -17,7 +18,9 @@
 			<a href="#">Data succulents</a> -->
 	</nav>
 
-    <div class="image-gallery">
+    <div class="lg:grid lg:grid-cols-3 lg:space-x-6 mx-10">
+
+
         <div class="image-item">
           <img src="./images/monstera.png" alt="monstera">
           <div class="text-container">
